--- a/recharge.css
+++ b/recharge.css
@@ -210,6 +210,25 @@ h1, h2, h3, h4 {
     background-image: var(--telkom-icon);
 } 
 
+.sim:nth-of-type(4) {
+    background-color: #FF25D0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+} 
+
+.sim:nth-of-type(4) label {
+    position: absolute;
+    color: #fff;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-weight: 700;
+    font-size: 2rem;
+} 
+
 input[type="radio"] {
     appearance: none;
     position: relative;
@@ -256,6 +275,11 @@ input[type="radio"]:checked:after {
 #sim-3:checked:after {
     border-right: calc(var(--sim-height) * 0.03333) solid #0099B1;
     border-bottom: calc(var(--sim-height) * 0.03333) solid #0099B1;
+} 
+
+#sim-4:checked:after {
+    border-right: calc(var(--sim-height) * 0.03333) solid #FF25D0;
+    border-bottom: calc(var(--sim-height) * 0.03333) solid #FF25D0;
 } 
 
 .footer {
