--- a/recharge.css
+++ b/recharge.css
@@ -289,7 +289,7 @@ input[type="radio"]:checked:after {
     flex-flow: row wrap;
 } 
 
-.main .footer button, .crop .footer button {
+.main .footer button, .crop .footer button, .recharged .footer button {
     max-width: 288px;
     height: 40px;
     width: 80%;
@@ -318,8 +318,8 @@ input[type="radio"]:checked:after {
     padding: 20px;
 } 
 
-.about_window .head > h2, .about_window .head h3, .text {
-    color: #676767;
+.about_window .head h2, .about_window .head h3, .text, .recharged .head h2, .recharged p {
+    color: #676767 !important;
 } 
 
 hr {
@@ -339,6 +339,7 @@ hr {
     width: 100%;
     padding: 0;
     text-align: left;
+    font-size: 0.8rem;
 } 
 
 .about_window .footer {
@@ -467,7 +468,7 @@ video {
     transform: translate(-50%, -50%);
     height: 40px;
     width: 200px;
-    box-shadow: 0 0 0 9999px rgba(0,0,0,0.5);
+    box-shadow: 0 0 0 1000vmax rgba(0,0,0,0.7);
     background: transparent;
     overflow: visible;
 } 
@@ -529,7 +530,7 @@ video {
 
 .visible_footer {
     position: absolute;
-    top: calc(100% - 80px);
+    top: calc(100% - 100px);
     left: 0;
     height: 80px;
     width: 100%;
@@ -609,21 +610,51 @@ video {
           transform: translateZ(0);}
 } 
 
-input[type="text"] {
+.input {
     position: relative;
     top: 0;
     left: 50%;
     transform: translate(-50%, 0);
-    height: 60px;
-    width: 300px;
+    width: fit-content;
+    height: fit-content;
+    overflow: visible;
+} 
+
+input[type="text"] {
+    display: inline-block;
+    width: calc(14ch + 2px);
     overflow: auto;
-    border: none;
-    border-bottom: 1px solid #0099B1;
-    color: #000;
-    font-size: 2rem;
-    font-weight: 300;
+    border: 1px solid #0099B1;
+    border-top: none;
+    color: #676767;
+    font-size: 1.7rem;
+    font-weight: 400;
     text-align: center;
+    padding: 20px 1px 0 1px;
+    margin: 0;
     outline: none;
+    background: #fff;
+} 
+
+input[type="text"]:disabled {
+    background: initial;
+} 
+
+.border {
+    position: absolute;
+    top: 0;
+    height: 80%;
+    width: 2px;
+    background: #fff;
+    z-index: 2;
+} 
+
+.border:first-of-type {
+    left: -0.5px;
+} 
+
+.border:last-of-type {
+    right: -0.5px;
 } 
 
 .text {
@@ -718,7 +749,7 @@ input[type="text"] {
     background-position: center;
     background-repeat: no-repeat;
     overflow: visible;
-    box-shadow: 0 0 0 1000vmax rgba(0, 0, 0, 0.5);*/
+    box-shadow: 0 0 0 1000vmax rgba(0, 0, 0, 0.7);
 } 
 
 .crop_frame:before {
@@ -797,6 +828,47 @@ input[type="text"] {
     width: 16px;
     top: calc(50% - 5px);
     left: calc(100% - 7px);
+} 
+
+/*Recharge window*/
+.recharged {
+    display: none;
+    background: #fff;
+} 
+
+.recharged div:nth-of-type(2) {
+    position: relative;
+    width: 100%;
+    top: 5%;
+    left: 0;
+    
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-flow: column nowrap;
+} 
+
+.recharged .success_icon {
+    height: 70px;
+    width: 70px;
+    border-radius: 50%;
+    background-image: var(--tick-icon);
+    background-color: #00C108;
+    background-size: 115% 115%;
+    background-position: center;
+    background-repeat: no-repeat;
+} 
+
+.recharged p {
+    text-align: center;
+    margin: 20px;
+    font-size: 0.85rem;
+} 
+
+.recharged .footer {
+    position: relative;
+    width: 100%;
+    top: 10vh;
 } 
 
 @media only screen and (orientation: portrait) and (max-height: 350px) {
