--- a/recharge.css
+++ b/recharge.css
@@ -175,6 +175,8 @@ h1, h2, h3, h4 {
     position: relative;
     margin: 5px 25px;
     padding: 0;
+    max-height: 300px;
+    max-width: 225px;
     height: var(--sim-height);
     width: calc(var(--sim-height) * 0.75);
     border-radius: calc(var(--sim-height) * 0.06667);
