--- a/index.css
+++ b/index.css
@@ -622,7 +622,7 @@ video {
 
 input[type="text"] {
     display: inline-block;
-    width: fit-content;
+    width: 125px;
     overflow: auto;
     border: 1px solid #0099B1;
     border-top: none;
