--- a/index.css
+++ b/index.css
@@ -103,6 +103,47 @@
 } 
 
 
+/*pop up note*/
+#pop-up-note {
+    font-size: 0.8rem;
+    position: absolute;
+    margin: auto;
+    top: 150%;
+    left: 50%;
+    transform: translateX(-50%);
+    max-width: calc(100vw - 30px);
+    width: -webkit-max-content;
+    width: -moz-max-content;
+    width: -ms-max-content;
+    width: -o-max-content;
+    width: max-content;
+    background: rgba(0, 135, 240, 0.9);
+    color: #fff;
+    padding: 10px 20px;
+    box-shadow: 0 0 4px 1px rgba(0, 0, 0, 0.7);
+    border: none;
+    border-radius: 6px;
+    text-align: center;
+    display: none;
+    z-index: 2;
+} 
+
+.pop {
+    animation: pop-in .25s ease-out 0s 1 normal forwards running, 
+               pop-out .5s linear 3.55s 1 normal forwards running;
+} 
+ 
+@keyframes pop-in {
+    from { top: 100%; opacity: 0;}
+    to { top: calc(100% - 100px); opacity: 1;} 
+}
+
+@keyframes pop-out {
+    from { opacity: 1; }
+    to { opacity: 0; } 
+} 
+
+
 /*main content styles*/
 .window {
     position: absolute; 
