--- a/index.css
+++ b/index.css
@@ -372,6 +372,7 @@ hr {
 } 
 
 .about_window .options button {
+	position: relative;
     display: block;
     border: none;
     background: transparent;
@@ -381,6 +382,17 @@ hr {
     padding: 0;
     text-align: left;
     font-size: 0.8rem;
+} 
+
+.about_window .options button:first-of-type::before {
+	position: absolute;
+	top: 50%;
+	right: 20px;
+	transform: translateY(-50%);
+	height: 10px;
+	width: 20px;
+	border: 4px;
+	background: #0099B1;
 } 
 
 .about_window .footer {
