--- a/index.css
+++ b/index.css
@@ -384,11 +384,11 @@ hr {
     font-size: 0.8rem;
 } 
 
-.about_window .options button:first-of-type::before {
+.about_window .options button:first-of-type:before {
 	position: absolute;
 	top: 50%;
 	right: 20px;
-	transform: translateY(-50%);
+	transform: translate(0%, -50%);
 	height: 10px;
 	width: 20px;
 	border: 4px;
