--- a/index.css
+++ b/index.css
@@ -388,10 +388,10 @@ hr {
 	position: absolute;
 	top: 50%;
 	right: 20px;
-	transform: translate(0%, -50%);
+	/*transform: translate(0%, -50%);*/
 	height: 10px;
 	width: 20px;
-	border: 4px;
+	border-radius: 4px;
 	background: #0099B1;
 } 
 
