--- a/index.css
+++ b/index.css
@@ -388,7 +388,7 @@ hr {
 	position: absolute;
 	top: 50%;
 	right: -20px;
-	/*transform: translate(0%, -50%);*/
+	transform: translateY(-50%);
 	height: 10px;
 	width: 20px;
 	border-radius: 4px;
