--- a/index.css
+++ b/index.css
@@ -386,9 +386,11 @@ hr {
 
 .about_window .options button span {
 	position: absolute;
+	right: 30px;
 	height: 10px;
 	width: 20px;
-	background: #000;
+	background: #0099B1;
+	border-radius: 5px;
 } 
 
 .about_window .footer {
