--- a/index.css
+++ b/index.css
@@ -386,11 +386,20 @@ hr {
 
 .about_window .options button span {
 	position: absolute;
-	right: 30px;
-	height: 10px;
-	width: 20px;
+	right: 40px;
+	height: 15px;
+	width: 30px;
 	background: #0099B1;
 	border-radius: 5px;
+	padding: 3px;
+} 
+
+.about_window .options button span span {
+	position: relative;
+	width: 12px;
+	height: 12px;
+	background: #fff;
+	border-radius: 50%;
 } 
 
 .about_window .footer {
