--- a/index.css
+++ b/index.css
@@ -384,17 +384,17 @@ hr {
     font-size: 0.8rem;
 } 
 
-.about_window .options button span {
+.about_window .options button .toggle {
 	position: absolute;
 	right: 40px;
 	height: 15px;
 	width: 30px;
 	background: #0099B1;
-	border-radius: 5px;
+	border-radius: 7.5px;
 	padding: 3px;
 } 
 
-.about_window .options button span span {
+.about_window .options button .switch {
 	position: relative;
 	width: 12px;
 	height: 12px;
