--- a/index.css
+++ b/index.css
@@ -394,7 +394,7 @@ hr {
 	padding: 3px;
 } 
 
-.about_window .options button .toggle .switch {
+.about_window .options button .toggle:before {
 	width: 12px;
 	height: 12px;
 	background: #fff;
