--- a/index.css
+++ b/index.css
@@ -397,7 +397,7 @@ hr {
 .about_window .options button .toggle:before {
 	width: 12px;
 	height: 12px;
-	background: #fff;
+	background: #000;
 	border-radius: 50%;
 	overflow: visible;
 	z-index: 1;
