--- a/index.css
+++ b/index.css
@@ -401,7 +401,7 @@ hr {
 	right: 58px;
 	width: 12px;
 	height: 12px;
-	background: #000;
+	background: #fff;
 	border-radius: 50%;
 	overflow: visible;
 	z-index: 1;
