--- a/index.css
+++ b/index.css
@@ -1015,11 +1015,13 @@ input[type="text"]:disabled {
 
 
 
-.dark_theme .sims {
+.dark_theme .sims, 
+.dark_theme.about_window, 
+.other_number .input_form {
 	background: #2E2E2E !important;
 }
 
 .dark_theme .sim:before, 
 .dark_theme input[type="radio"]:before {
 	background: #2E2E2E !important;
-} 
+}
