--- a/index.css
+++ b/index.css
@@ -1019,12 +1019,12 @@ input[type="text"]:disabled {
 .dark_theme .sims, 
 .dark_theme.about_window, 
 .dark_theme.load,
+.dark_theme.recharged,
 .dark_theme.other_number .input_form, 
-.dark_theme .scan .hidden_footer {
+.dark_theme.scan .hidden_footer {
 	background: #00171A !important;
 }
 
-/*.dark_theme .sim:before, 
-.dark_theme input[type="radio"]:before {
-	background: #2E2E2E !important;
-}*/
+.dark_theme .options button {
+	color: #fff;
+} 
