--- a/index.css
+++ b/index.css
@@ -19,7 +19,7 @@
     top: 50%;
     left: 50%;
     transform: translate3d(-50%, -50%, 0) scale(1);
-    display: none;
+    display: block;
     height: fit-content;
     width: fit-content;
     padding: 5px 10px;
