--- a/index.css
+++ b/index.css
@@ -18,7 +18,7 @@
     position: absolute;
     top: 50%;
     left: 50%;
-    transform: translate3d(-50%, -50%, 0) scale(1);
+    transform: translate3d(-50%, -50%, 0);
     display: block !important;
     height: fit-content;
     width: fit-content;
