--- a/index.css
+++ b/index.css
@@ -273,6 +273,7 @@ h1, h2, h3, h4 {
 input[type="radio"] {
     appearance: none;
     position: relative;
+    left: -100%;
     margin: 0;
     padding: 0;
     height: 100%;
